# live-chat

./: .gitignore  Cargo.toml  README.md
src/: main.rs  state.rs
src/models/: message.rs  mod.rs  user.rs
src/routes/: http.rs  mod.rs  ws.rs
src/utils/: auth.rs  fingerprinter.rs  mod.rs
static/: index.html  test.html
