
[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.6.2", features = ["cors", "trace", "catch-panic"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
headers = "0.4"
bincode = "1.3"
hex = "0.4"
sha2 = "0.10"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"